// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLoader > Arrow should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-KXCwU fMuuEW loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Brackets should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-gyycJP jPLMni loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Circle should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-eaUbBy ehDglX loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Dots should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-gaZyOd gSEhCy loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Filler should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-dDvxFM bEhvXA loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Linear should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-jqVXSH bKYydS loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Pulse should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-gTrWKq fNFvdF loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Rotation should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-kuACkN mmmqi loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Square should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-hWWBcw diftfd loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;
